[package]
name = "hostddns-daemon"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
